--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -88,6 +88,9 @@
     <Content Include="LogFiles\OctopusServer.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="LogFiles\ServerTasks-16572.log.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lib\Lib.csproj">
