Single exe and zip

--- a/source/Console/project.json
+++ b/source/Console/project.json
@@ -23,6 +23,7 @@
     }
   },
   "buildOptions": {
-    "emitEntryPoint": true
+    "emitEntryPoint": true,
+    "outputName": "SeqFlatFileImport"
   }
 }
