--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,6 @@ hgignore[.-]*
 ignore[.-]*
 svnignore[.-]*
 lint.db
-build
 tools/TestResult.xml
 *.ReSharper
 source/packages
@@ -68,3 +67,5 @@ TestResult.xml
 *.received.*
 packages
 *.trx
+.idea/
+!**/LogFiles/*
